--- a/site/404.html
+++ b/site/404.html
@@ -40,6 +40,9 @@
                                 <a href="/ML/" class="nav-link">Machine Learning</a>
                             </li>
                             <li class="navitem">
+                                <a href="/Certificates/" class="nav-link">Certificates</a>
+                            </li>
+                            <li class="navitem">
                                 <a href="/about/" class="nav-link">About</a>
                             </li>
                         </ul>
