--- a/site/ML/index.html
+++ b/site/ML/index.html
@@ -40,6 +40,9 @@
                                 <a href="./" class="nav-link">Machine Learning</a>
                             </li>
                             <li class="navitem">
+                                <a href="../Certificates/" class="nav-link">Certificates</a>
+                            </li>
+                            <li class="navitem">
                                 <a href="../about/" class="nav-link">About</a>
                             </li>
                         </ul>
@@ -56,7 +59,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" href="../about/" class="nav-link">
+                                <a rel="next" href="../Certificates/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
