--- a/site/about/index.html
+++ b/site/about/index.html
@@ -39,6 +39,9 @@
                             <li class="navitem">
                                 <a href="../ML/" class="nav-link">Machine Learning</a>
                             </li>
+                            <li class="navitem">
+                                <a href="../Certificates/" class="nav-link">Certificates</a>
+                            </li>
                             <li class="navitem active">
                                 <a href="./" class="nav-link">About</a>
                             </li>
@@ -51,7 +54,7 @@
                             </a>
                         </li>
                             <li class="nav-item">
-                                <a rel="prev" href="../ML/" class="nav-link">
+                                <a rel="prev" href="../Certificates/" class="nav-link">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
