--- a/site/index.html
+++ b/site/index.html
@@ -40,6 +40,9 @@
                                 <a href="ML/" class="nav-link">Machine Learning</a>
                             </li>
                             <li class="navitem">
+                                <a href="Certificates/" class="nav-link">Certificates</a>
+                            </li>
+                            <li class="navitem">
                                 <a href="about/" class="nav-link">About</a>
                             </li>
                         </ul>
@@ -80,7 +83,7 @@
             
             <li class="nav-item" data-level="1"><a href="#welcome-to-zerobytesone" class="nav-link">Welcome to ZeroBytes.One</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-level="2"><a href="#complete-bytes" class="nav-link">Complete Bytes</a>
+            <li class="nav-item" data-level="2"><a href="#what-will-you-get-from-these-bytes" class="nav-link">What Will You Get From These Bytes?</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -91,11 +94,6 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            
-            <li class="nav-item" data-level="1"><a href="#what-will-you-get-from-these-bytes" class="nav-link">What Will You Get From These Bytes?</a>
-              <ul class="nav flex-column">
-              </ul>
-            </li>
         </ul>
     </div>
 </div></div>
@@ -103,46 +101,7 @@
 
 <h1 id="welcome-to-zerobytesone">Welcome to ZeroBytes.One</h1>
 <p>If you are asking yourself, why this website called zero bytes, then let me tell you a secret "I just create zeros to give you the power to create complete bytes". In a nutshell, Zero Bytes is a journey from 0 ==&gt; 1, from NULL to totally Full, from <strong><em>no</em></strong>thing to <strong><em>som</em>e</strong>thing, from <strong>0</strong>000 0000  ==&gt;  0000 000<strong>1</strong> </p>
-<h2 id="complete-bytes">Complete Bytes</h2>
-<ul>
-<li>
-<h3 id="from-research-to-production">From Research to Production</h3>
-</li>
-</ul>
-<p><strong>PyTorch</strong> is is one of the primary frameworks used for deep learning, Natural Language processing. It provides a framework that accelerates the path from research prototyping to production deployment.</p>
-<ul>
-<li>
-<h3 id="learn-the-fastest-growing-programming-language-in-the-world">Learn the fastest-growing programming language in the world</h3>
-</li>
-</ul>
-<p>Its high-level, interpreted, and object-oriented architecture makes <strong>Python</strong> ideal for all types of software solutions.</p>
-<ul>
-<li>
-<h3 id="the-future-programming-language-of-data-science">The Future Programming Language of Data Science</h3>
-</li>
-</ul>
-<p><strong>Julia</strong> is a high-performance, dynamic programming language, many of its features are well suited for numerical analysis and computational science.</p>
-<ul>
-<li>
-<h3 id="find-clarity-when-you-need-it-most">Find clarity when you need it most</h3>
-</li>
-</ul>
-<p>Empower team members to discover insights hidden in your data with <strong>Microsoft Power BI</strong>.</p>
-<p>### Go where traditional BI cannot</p>
-<p><strong>Dash</strong> is the new standard for AI &amp; data science apps. NLP, object detection, predictive analytics, and more.</p>
-<ul>
-<li>
-<h3 id="find-easy-answers-to-hard-questions">Find easy answers to hard questions</h3>
-</li>
-</ul>
-<p>Whatever your needs, we’ve got you covered. Easily bring all your data together
-  <strong>with Tableau</strong>.</p>
-<h1 id="zerobytes-when-less-means-more">ZeroBytes: When less means more</h1>
-<p>Want to learn data science, but don’t have the time for a multi-year, full-time degree program? Luckily, there are many ways to prepare for a data science career.</p>
-<p><em>"Obviously, there is a trad-off between gaining knowledge and the costly time and money to obtain these knowledge. In ZeroBytes we believe that knowledge should be available to learner in premium, but at no cost."</em></p>
-<p><em>"When Free means Premium. When less means More. This is the most complex formula we master in ZeroBytes. We just started.. There are many things that seem impossible only so long as one does not attempt them."</em></p>
-<p><em>"Our mission is to make the Arab world a better place to learn, gain knowledge and apply these knowledge to solve real-life problems that is result in leading a better life."</em></p>
-<h1 id="what-will-you-get-from-these-bytes">What Will You Get From These Bytes?</h1>
+<h2 id="what-will-you-get-from-these-bytes">What Will You Get From These Bytes?</h2>
 <p>Keep up with the future with in-demand data science knowledge. Top companies need data science skills. Learn at your own pace, Where Free means Premium.</p>
 <ul>
 <li><a href="https://python.zerobytes.one/python">Python: A complete Byte</a></li>
@@ -152,6 +111,10 @@
 <li><a href="https://training.zerobytes.one/">MS Excel: Interactive Training</a></li>
 <li><a href="https://counting.zerobytes.one/">Counting in 13 Languages including Arabic, English &amp; Chinese</a></li>
 </ul>
+<h1 id="zerobytes-when-less-means-more">ZeroBytes: When less means more</h1>
+<p><em>"Obviously, there is a trade-off between gaining knowledge and the costly time and money to obtain these knowledge. In ZeroBytes we believe that knowledge should be available to learner in premium, but at no cost."</em></p>
+<p><em>"When Free means Premium. When less means More. This is the most complex formula we master in ZeroBytes. We just started.. There are many things that seem impossible only so long as one does not attempt them."</em></p>
+<p><em>"Our mission is to make the Arab world a better place to learn, gain knowledge and apply these knowledge to solve real-life problems that is result in leading a better life."</em></p>
 <p>Please see the <a href="license/">projects license</a> for further details.</p></div>
             </div>
         </div>
@@ -233,5 +196,5 @@
 
 <!--
 MkDocs version : 1.2.3
-Build Date UTC : 2022-02-23 02:13:29.862929+00:00
+Build Date UTC : 2022-02-24 00:48:45.950056+00:00
 -->
