--- a/site/Certificates/IBM/index.html
+++ b/site/Certificates/IBM/index.html
@@ -40,6 +40,9 @@
                                 <a href="../../ML/" class="nav-link">Machine Learning</a>
                             </li>
                             <li class="navitem">
+                                <a href="../../DC/" class="nav-link">Dynamic Components</a>
+                            </li>
+                            <li class="navitem">
                                 <a href="../" class="nav-link">Certificates</a>
                             </li>
                             <li class="navitem">
