--- a/site/index.html
+++ b/site/index.html
@@ -40,6 +40,9 @@
                                 <a href="ML/" class="nav-link">Machine Learning</a>
                             </li>
                             <li class="navitem">
+                                <a href="DC/" class="nav-link">Dynamic Components</a>
+                            </li>
+                            <li class="navitem">
                                 <a href="Certificates/" class="nav-link">Certificates</a>
                             </li>
                             <li class="navitem">
@@ -196,5 +199,5 @@
 
 <!--
 MkDocs version : 1.2.3
-Build Date UTC : 2022-02-24 00:48:45.950056+00:00
+Build Date UTC : 2022-02-25 08:24:15.073250+00:00
 -->
