--- a/site/ML/index.html
+++ b/site/ML/index.html
@@ -40,6 +40,9 @@
                                 <a href="./" class="nav-link">Machine Learning</a>
                             </li>
                             <li class="navitem">
+                                <a href="../DC/" class="nav-link">Dynamic Components</a>
+                            </li>
+                            <li class="navitem">
                                 <a href="../Certificates/" class="nav-link">Certificates</a>
                             </li>
                             <li class="navitem">
@@ -59,7 +62,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a rel="next" href="../Certificates/" class="nav-link">
+                                <a rel="next" href="../DC/" class="nav-link">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
                             </li>
