--- a/site/DC/index.html
+++ b/site/DC/index.html
@@ -100,7 +100,7 @@
 <ul>
 <li><a href="Application%20Protector/">Application Protector</a></li>
 <li><a href="Binding%20Recordset/">Binding Recordset</a></li>
-<li><a href="Data Manager/index.md">Data Manager</a></li>
+<li><a href="Data%20Manager/">Data Manager</a></li>
 <li><a href="Data%20Entry%20Validator/">Data Entry Validator</a></li>
 <li><a href="Dynamic%20Report/">Dynamic Report</a></li>
 <li><a href="Form%20Flipper/">Form Flipper</a></li>
