--- a/site/DC/Data Manager/index.html
+++ b/site/DC/Data Manager/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         
-        <link rel="canonical" href="https://zerobytes.one/DC/Data%20Manger/">
+        <link rel="canonical" href="https://zerobytes.one/DC/Data%20Manager/">
         <link rel="shortcut icon" href="../../img/favicon.ico">
         <title>**DynamicComponents DataManger -----** - ZeroBytes</title>
         <link href="../../css/bootstrap.min.css" rel="stylesheet">
